Bug 691383 - type 3 pdfwrite issues (was FAPI/Freetype and pdfwrite interaction problems)
Summary: type 3 pdfwrite issues (was FAPI/Freetype and pdfwrite interaction problems)
Status: RESOLVED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: PDF Writer (show other bugs)
Version: master
Hardware: All All
: P4 normal
Assignee: Ken Sharp
URL:
Keywords:
: 691529 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-06-11 08:29 UTC by Chris Liddell (chrisl)
Modified: 2010-10-15 15:40 UTC (History)
3 users (show)

See Also:
Customer:
Word Size: ---


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Chris Liddell (chrisl) 2010-06-11 08:29:51 UTC
The following files (identified by Marcos in Bug 691252) illustrate some problems using the new FAPI/FT code with the pdfwrite device.

bug687044.ps
bug688796a.eps
bug687845.ps
Comment 1 Ken Sharp 2010-07-13 13:28:27 UTC
(In reply to comment #0)
> The following files (identified by Marcos in Bug 691252) illustrate some
> problems using the new FAPI/FT code with the pdfwrite device.
> 
> bug687044.ps
> bug688796a.eps
> bug687845.ps


I'm not convinced that bug687044.ps and bug687845.ps have ever been 'correct'. When I use a copy of gs 8.70 to convert these to PDF I see the same result as 8.72, essentially text in the type 3 font goes missing. Also setting DisableFAPI=true makes no difference for me.

bug688796a.eps does seem different to previous versions though, and setting DisableFAPI=true restores the old behaviour.
Comment 2 Ken Sharp 2010-07-13 13:34:08 UTC
(In reply to comment #1)

 
> I'm not convinced that bug687044.ps and bug687845.ps have ever been 'correct'.

Sorry, that should have been bug687044.ps and bug688796a.eps.

> bug688796a.eps does seem different to previous versions though, and setting
> DisableFAPI=true restores the old behaviour.

And that one should have been bug687845.ps.
Comment 3 Chris Liddell (chrisl) 2010-07-29 14:00:20 UTC
resolved with r11549
Comment 4 Ken Sharp 2010-07-29 14:12:37 UTC
Would still like to see why the other two files don't work (and apparently never have) with pdfwrite.
Comment 5 Ken Sharp 2010-08-05 07:45:09 UTC
*** Bug 691529 has been marked as a duplicate of this bug. ***
Comment 6 Ken Sharp 2010-08-11 07:09:55 UTC
voipas@gmail.com You altered the Platform and OS of a bug which does not belong to you. Please do not randomly edit bugs.

Restored the previous settings.
Comment 7 Ken Sharp 2010-10-15 15:40:43 UTC
Fixed in revision 11617, patch here:

http://ghostscript.com/pipermail/gs-cvs/2010-October/011845.html